--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "adobe-afm-transform",
-  "version": "1.0.10",
+  "version": "1.1.0",
   "description": "Adobe Flavored Markdown transform",
   "source": "src/afm.js",
   "browser": "dist/afm.js",
@@ -8,7 +8,7 @@
   "module": "dist/afm.esm.js",
   "types": "dist/afm.d.ts",
   "scripts": {
-    "build": "rollup --config",
+    "build": "rollup --config && npm run test",
     "test": "eslint *.js test/*.js && mocha test/*.js",
     "types": "npx typescript src/*.js --declaration --allowJs --emitDeclarationOnly --outDir dist"
   },
