--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "adobe-afm-transform",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "Adobe Flavored Markdown transform",
   "source": "src/afm.js",
   "browser": "dist/afm.js",
@@ -30,9 +30,10 @@
   },
   "homepage": "https://github.com/adobe-experience-league/adobe-afm-transform#readme",
   "devDependencies": {
-    "eslint": "^7.3.1",
-    "mocha": "^8.0.1",
-    "rollup": "^2.26.4",
-    "rollup-plugin-terser": "^7.0.0"
+    "eslint": "^7.10.0",
+    "markdown-it": "^11.0.1",
+    "mocha": "^8.1.3",
+    "rollup": "^2.28.2",
+    "rollup-plugin-terser": "^7.0.2"
   }
 }
