--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "adobe-afm-transform",
-  "version": "1.2.8",
+  "version": "1.2.9",
   "description": "Adobe Flavored Markdown transform",
   "source": "src/afm.js",
   "browser": "dist/afm.js",
@@ -9,7 +9,7 @@
   "types": "dist/afm.d.ts",
   "scripts": {
     "build": "rollup --config && npm run test",
-    "test": "eslint *.js test/*.js && mocha test/*.js",
+    "test": "eslint *.js src/*.js test/*.js && mocha test/*.js",
     "types": "npx typescript src/*.js --declaration --allowJs --emitDeclarationOnly --outDir dist"
   },
   "repository": {
